fix alignment issue

--- a/style.css
+++ b/style.css
@@ -293,12 +293,17 @@
             .header-title-group {
                 align-items: center;
                 width: 100%;
+                order: 1;
             }
 
             .toggle-container {
-                margin-top: 15px;
-                justify-content: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin-top: 20px;
                 width: 100%;
+                order: 2;
+                gap: 10px;
             }
 
             h1 {
